# lanhu-mcp-cli

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEMO.md  DEPLOY.md  Dockerfile  GET-COOKIE-TUTORIAL.md  ai-install-guide.md  config.example.env  docker-compose.yml  easy-install.bat  easy-install.sh  lanhu.cmd  lanhu.ps1  lanhu_cli.py  lanhu_mcp_server.py  pyproject.toml  quickstart.bat  quickstart.sh  setup-env.bat  setup-env.sh
scripts/: print-mcp-config.bat  print-mcp-config.sh
tests/: __init__.py  test_axure_annotations.py  test_basic.py  test_css_utils.py  test_design_sectors.py
tools/: audit_all.py  debug_coverage.py  verify_vs_web.py
